--- a/css/styles.css
+++ b/css/styles.css
@@ -75,9 +75,10 @@ header {
 }
 
 #sidebar-content nav ul li a {
-    font-size: 1.1em;
+    font-size: 1.2em;  /* Increase the font size */
     text-decoration: none;
     color: #333;
+    font-weight: 500;  /* Make it slightly bolder */
 }
 
 .note-list {
