--- a/css/styles.css
+++ b/css/styles.css
@@ -139,3 +139,12 @@ header {
         margin-left: 0;
     }
 }
+
+#home-button {
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 24px;
+    text-decoration: none;
+}
